[package]
name = "s739"
version = "0.4.0"
edition = "2021"
authors = ["vvh413"]
description = "Steganography tool"

[dependencies]
anyhow = "1.0.72"
bitvec = "1.0.1"
clap = { version = "4.3.17", features = ["derive"] }
clap_complete = "4.3.2"
image = "0.24.6"
libc = "0.2.147"
mozjpeg-sys = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "e2e"
harness = false
