[package]
name = "s739"
version = "0.4.6"
edition = "2021"
authors = ["vvh413"]
description = "Steganography tool"

[dependencies]
anyhow = "1.0.72"
bitvec = "1.0.1"
image = { version = "0.24.6", default-features = false, features = ["png"] }
libc = "0.2.147"
mozjpeg-sys = "2.0.0"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_seeder = "0.2.3"
clap = { version = "4.3.17", features = ["derive"], optional = true }
clap_complete = { version = "4.3.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"
image = { version = "0.24.6", default-features = false, features = [
  "png",
  "jpeg",
] }

[features]
cli = ["clap", "clap_complete"]

[[bin]]
name = "s739"
required-features = ["cli"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
