[package]
name = "s739"
version = "0.5.0"
edition = "2021"
authors = ["vvh413"]
description = "Steganography tool"

[dependencies]
anyhow = "1.0.95"
bitvec = "1.0.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
libc = "0.2.169"
mozjpeg-sys = "2.2.3"
rand = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
rand_seeder = "0.4.0"
clap = { version = "4.5.28", features = ["derive"], optional = true }
clap_complete = { version = "4.5.44", optional = true }
derivative = "2.2.0"

[dev-dependencies]
criterion = "0.5.1"
image = { version = "0.25.5", default-features = false, features = [
  "png",
  "jpeg",
] }
rand = "0.9.0"

[features]
cli = ["clap", "clap_complete"]

[[bin]]
name = "s739"
required-features = ["cli"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
